objects/smagicinteract__Object_Field_Config__c.object
<CustomObject>
    <fields>
        <fullName>smagicinteract__Field_Name__c</fullName>
        <description>Stores field name to be used by Message Object Config object.</description>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Field_Purpose__c</fullName>
        <description>Stores purpose for which field name to be used by Message Object Config object.</description>
        <label>Field Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Incoming</fullName>
                </value>
                <value>
                    <fullName>Outgoing</fullName>
                </value>
                <value>
                    <fullName>unrelated Search</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__Field_Type__c</fullName>
        <description>Gives information about how to use Field Name.</description>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>API Name</fullName>
                </value>
                <value>
                    <fullName>Data Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__Object_Message_Config__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores information of Message Object Config.</description>
        <label>Related To Master Object</label>
        <referenceTo>smagicinteract__Message_Object_Config__c</referenceTo>
        <relationshipLabel>Object Message Config</relationshipLabel>
        <relationshipName>Object_Message_Config</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Unrelated_Object_Config__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores information of Unrelated Object Config. Used only when the purpose is unrelated.</description>
        <label>Unrelated Object Record</label>
        <referenceTo>smagicinteract__Unrelated_Object_Config__c</referenceTo>
        <relationshipLabel>Unrelated Object Message Config</relationshipLabel>
        <relationshipName>Unrelated_Object_Message_Config</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Object Field Config</label>
    <nameField>
        <label>Object Field Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Field Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>